objects/ClinicRating__c.object
<CustomObject>
    <description>A candidate can be white or blacklisted for certain clinics or be set on a personal blacklist</description>
    <label>Kandidatenliste</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Candidate List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kandidatenlisten</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Whitelist</fullName>
                </value>
                <value>
                    <fullName>Blacklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the user information for the personal blacklist</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CandidateList</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClinicId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinic</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>healthcareInstitution</value>
            </filterItems>
            <infoMessage>Only Health Care Institutions are visible</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Candidate Lists (Clinic)</relationshipLabel>
        <relationshipName>ClinicRatings_Candidate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <description>Stores the combination of account, person account or account and user id (set by a flow), so that a duplication rule can be set up</description>
        <label>Unique Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CandidateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>doctor</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>caregiver</value>
            </filterItems>
            <infoMessage>Only doctors and care givers are visible in this lookup</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Candidate Lists (Candidate)</relationshipLabel>
        <relationshipName>ClinicRatings_Clinic</relationshipName>
        <type>Lookup</type>
    </fields>
    <validationRules>
        <fullName>ClinicOrUserFilled</fullName>
        <active>true</active>
        <description>Hinders saving records where clinic and user is filled</description>
        <errorConditionFormula>NOT(ISBLANK(ClinicId__c )) &amp;&amp; NOT(ISBLANK( User__c))</errorConditionFormula>
        <errorMessage>Please enter either clinic or user.</errorMessage>
    </validationRules>
</CustomObject>